Rename new components payment-dropdown

--- a/account/edit-photo.html
+++ b/account/edit-photo.html
@@ -976,7 +976,7 @@
             <div style="margin-top: 24px; margin-bottom: 24px;">
              <button type="button" class="_630kao" aria-expanded="false" aria-busy="false">
               <div class="footer__progress-active-wrapper">
-               <div class="_10ejfg4u"><div class="_18ilrswp">Changes &amp; cancellations</div></div>
+               <div class="payment-dropdown__text"><div class="_18ilrswp">Changes &amp; cancellations</div></div>
                <div class="cell-middle">
                 <div class="_z7e3cb" style="transform: rotate(0deg);">
                  <svg viewBox="0 0 18 18" role="presentation" aria-hidden="true" focusable="false" style="height: 11px; width: 11px; display: block; fill: rgb(118, 118, 118);">
@@ -991,7 +991,7 @@
             <div style="margin-top: 24px; margin-bottom: 24px;">
              <button type="button" class="_630kao" aria-expanded="false" aria-busy="false">
               <div class="footer__progress-active-wrapper">
-               <div class="_10ejfg4u"><div class="_18ilrswp">Resolve a problem</div></div>
+               <div class="payment-dropdown__text"><div class="_18ilrswp">Resolve a problem</div></div>
                <div class="cell-middle">
                 <div class="_z7e3cb" style="transform: rotate(0deg);">
                  <svg viewBox="0 0 18 18" role="presentation" aria-hidden="true" focusable="false" style="height: 11px; width: 11px; display: block; fill: rgb(118, 118, 118);">
@@ -1006,7 +1006,7 @@
             <div style="margin-top: 24px; margin-bottom: 24px;">
              <button type="button" class="_630kao" aria-expanded="false" aria-busy="false">
               <div class="footer__progress-active-wrapper">
-               <div class="_10ejfg4u"><div class="_18ilrswp">Prices &amp; fees</div></div>
+               <div class="payment-dropdown__text"><div class="_18ilrswp">Prices &amp; fees</div></div>
                <div class="cell-middle">
                 <div class="_z7e3cb" style="transform: rotate(0deg);">
                  <svg viewBox="0 0 18 18" role="presentation" aria-hidden="true" focusable="false" style="height: 11px; width: 11px; display: block; fill: rgb(118, 118, 118);">
