--- a/messaging/messages.html
+++ b/messaging/messages.html
@@ -4044,7 +4044,7 @@
                                         <div style="margin-top: 12px; margin-bottom: 12px;">
                                           <div>
                                             <div class="footer__progress-active-wrapper">
-                                              <div class="_10ejfg4u">
+                                              <div class="payment-dropdown__text">
                                                 <div class="hero__title"><span>₱3,000.00 x 2 nights</span></div>
                                               </div>
                                               <div class="cell-middle"><span class="hero__title"><span
@@ -4056,7 +4056,7 @@
                                         <div style="margin-top: 12px; margin-bottom: 12px;">
                                           <div>
                                             <div class="footer__progress-active-wrapper">
-                                              <div class="_10ejfg4u">
+                                              <div class="payment-dropdown__text">
                                                 <div class="hero__title"><span>Cleaning fee</span></div>
                                               </div>
                                               <div class="cell-middle"><span class="hero__title"><span
@@ -4067,7 +4067,7 @@
                                         <div style="margin-top: 12px; margin-bottom: 12px;">
                                           <div>
                                             <div class="footer__progress-active-wrapper">
-                                              <div class="_10ejfg4u">
+                                              <div class="payment-dropdown__text">
                                                 <div class="hero__title"><span>Service fee</span></div>
                                               </div>
                                               <div class="cell-middle"><span class="hero__title"><span
@@ -4082,7 +4082,7 @@
                                         </div>
                                         <div>
                                           <div class="footer__progress-active-wrapper">
-                                            <div class="_10ejfg4u">
+                                            <div class="payment-dropdown__text">
                                               <div class="btn-light__text"><span>Total</span></div>
                                             </div>
                                             <div class="cell-middle"><span class="btn-light__text"><span
@@ -4098,7 +4098,7 @@
                                         </div>
                                         <div class="_yoru23">
                                           <div class="footer__progress-active-wrapper">
-                                            <div class="_10ejfg4u">
+                                            <div class="payment-dropdown__text">
                                               <div style="margin-bottom: 4px;">
                                                 <div class="btn-light__text">Always communicate through Airbnb</div>
                                               </div>
