--- a/payments/payment.html
+++ b/payments/payment.html
@@ -4143,7 +4143,7 @@
                                                                 aria-activedescendant="dropdown-selector-payment_option_selector-option-ANDROID_PAY"
                                                                 role="listbox"
                                                                 tabindex="0"
-                                                                class="_i3uuixy pointer-events-none"
+                                                                class="payment-dropdown pointer-events-none"
                                                                 style="
                                                                   opacity: 0;
                                                                   top: -16px;
@@ -4180,7 +4180,7 @@
                                                                       >
                                                                         <div>
                                                                           <div
-                                                                            class="_18z8fput"
+                                                                            class="payment-dropdown__icon"
                                                                           >
                                                                             <svg
                                                                               xmlns="http://www.w3.org/2000/svg"
@@ -4223,7 +4223,7 @@
                                                                         </div>
                                                                       </div>
                                                                       <div
-                                                                        class="_10ejfg4u"
+                                                                        class="payment-dropdown__text"
                                                                       >
                                                                         <div>
                                                                           <span
@@ -4237,7 +4237,7 @@
                                                                         class="va-middle"
                                                                       >
                                                                         <span
-                                                                          class="_1s9o8so5"
+                                                                          class="payment-dropdown__check"
                                                                           ><div
                                                                             class="va-container-v"
                                                                           >
@@ -4284,7 +4284,7 @@
                                                                     method</span
                                                                   >
                                                                   <div
-                                                                    class="_ts5d6x"
+                                                                    class="payment-dropdown__title"
                                                                     aria-hidden="true"
                                                                   >
                                                                     Add payment
@@ -4307,7 +4307,7 @@
                                                                       >
                                                                         <div>
                                                                           <div
-                                                                            class="_18z8fput"
+                                                                            class="payment-dropdown__icon"
                                                                           >
                                                                             <svg
                                                                               viewBox="0 0 32 32"
@@ -4334,7 +4334,7 @@
                                                                         </div>
                                                                       </div>
                                                                       <div
-                                                                        class="_10ejfg4u"
+                                                                        class="payment-dropdown__text"
                                                                       >
                                                                         <div>
                                                                           <span
@@ -4350,7 +4350,7 @@
                                                                         class="va-middle"
                                                                       >
                                                                         <span
-                                                                          class="_6h56b0p"
+                                                                          class="payment-dropdown__check-hide"
                                                                           ><div
                                                                             class="va-container-v"
                                                                           >
@@ -4401,7 +4401,7 @@
                                                                       >
                                                                         <div>
                                                                           <div
-                                                                            class="_18z8fput"
+                                                                            class="payment-dropdown__icon"
                                                                           >
                                                                             <svg
                                                                               xmlns="http://www.w3.org/2000/svg"
@@ -4454,7 +4454,7 @@
                                                                         </div>
                                                                       </div>
                                                                       <div
-                                                                        class="_10ejfg4u"
+                                                                        class="payment-dropdown__text"
                                                                       >
                                                                         <span>
                                                                           Google
@@ -4465,7 +4465,7 @@
                                                                         class="va-middle"
                                                                       >
                                                                         <span
-                                                                          class="_6h56b0p"
+                                                                          class="payment-dropdown__check-hide"
                                                                           ><div
                                                                             class="va-container-v"
                                                                           >
