--- a/resource-center/resources.html
+++ b/resource-center/resources.html
@@ -66,7 +66,7 @@
                             </div>
                           </a>
                         </div>
-                        <div class="_10ejfg4u"></div>
+                        <div class="payment-dropdown__text"></div>
                         <div class="cell-middle">
                           <div style="margin-right: 16px">
                             <div class="_1ltxwi4">
@@ -86,7 +86,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="_10ejfg4u">
+                    <div class="payment-dropdown__text">
                       <div data-showat="mediumAndAbove" class="hidden block-md">
                         <div style="margin-left: 8px">
                           <div class="_cfvh61">
@@ -465,7 +465,7 @@
                           >
                             <div class="_1u60u8g">
                               <div class="footer__progress-active-wrapper">
-                                <div class="_10ejfg4u">
+                                <div class="payment-dropdown__text">
                                   <div class="_144bqbg">Getting started</div>
                                 </div>
                               </div>
@@ -481,7 +481,7 @@
                           >
                             <div class="_1u60u8g">
                               <div class="footer__progress-active-wrapper">
-                                <div class="_10ejfg4u">
+                                <div class="payment-dropdown__text">
                                   <div class="_144bqbg">
                                     Attracting bookings
                                   </div>
@@ -499,7 +499,7 @@
                           >
                             <div class="_1u60u8g">
                               <div class="footer__progress-active-wrapper">
-                                <div class="_10ejfg4u">
+                                <div class="payment-dropdown__text">
                                   <div class="_144bqbg">
                                     Providing a 5-star Experience
                                   </div>
@@ -517,7 +517,7 @@
                           >
                             <div class="_1u60u8g">
                               <div class="footer__progress-active-wrapper">
-                                <div class="_10ejfg4u">
+                                <div class="payment-dropdown__text">
                                   <div class="_144bqbg">
                                     Responsible hosting
                                   </div>
@@ -535,7 +535,7 @@
                           >
                             <div class="_1u60u8g">
                               <div class="footer__progress-active-wrapper">
-                                <div class="_10ejfg4u">
+                                <div class="payment-dropdown__text">
                                   <div class="_144bqbg">Online Experiences</div>
                                 </div>
                               </div>
@@ -565,7 +565,7 @@
                           >
                             <div class="_1u60u8g">
                               <div class="footer__progress-active-wrapper">
-                                <div class="_10ejfg4u">
+                                <div class="payment-dropdown__text">
                                   <div class="_144bqbg">
                                     News and updates for Experiences
                                   </div>
@@ -587,7 +587,7 @@
                     >
                       <div class="_1u60u8g">
                         <div class="footer__progress-active-wrapper">
-                          <div class="_10ejfg4u">
+                          <div class="payment-dropdown__text">
                             <div class="_144bqbg">Become a host</div>
                           </div>
                           <div class="cell-middle">
@@ -635,7 +635,7 @@
                       >
                         <div class="_1u60u8g">
                           <div class="footer__progress-active-wrapper">
-                            <div class="_10ejfg4u">
+                            <div class="payment-dropdown__text">
                               <div class="_144bqbg">Profile</div>
                             </div>
                             <div class="cell-middle">
@@ -670,7 +670,7 @@
                       >
                         <div class="_1u60u8g">
                           <div class="footer__progress-active-wrapper">
-                            <div class="_10ejfg4u">
+                            <div class="payment-dropdown__text">
                               <div class="_144bqbg">Settings</div>
                             </div>
                             <div class="cell-middle">
@@ -719,7 +719,7 @@
                       >
                         <div class="_1u60u8g">
                           <div class="footer__progress-active-wrapper">
-                            <div class="_10ejfg4u">
+                            <div class="payment-dropdown__text">
                               <div class="_144bqbg">Get help</div>
                             </div>
                             <div class="cell-middle">
@@ -768,7 +768,7 @@
                       >
                         <div class="_1u60u8g">
                           <div class="footer__progress-active-wrapper">
-                            <div class="_10ejfg4u">
+                            <div class="payment-dropdown__text">
                               <div class="_144bqbg">English (US)</div>
                             </div>
                             <div class="cell-middle">
@@ -803,7 +803,7 @@
                       >
                         <div class="_1u60u8g">
                           <div class="footer__progress-active-wrapper">
-                            <div class="_10ejfg4u">
+                            <div class="payment-dropdown__text">
                               <div class="_144bqbg">₱ PHP</div>
                             </div>
                             <div class="cell-middle">
