--- a/resource-center/article.html
+++ b/resource-center/article.html
@@ -67,7 +67,7 @@
                             </div>
                           </a>
                         </div>
-                        <div class="_10ejfg4u"></div>
+                        <div class="payment-dropdown__text"></div>
                         <div class="cell-middle">
                           <div style="margin-right: 16px">
                             <div class="_1ltxwi4">
@@ -87,7 +87,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="_10ejfg4u">
+                    <div class="payment-dropdown__text">
                       <div data-showat="mediumAndAbove" class="hidden block-md">
                         <div style="margin-left: 8px">
                           <div class="_cfvh61">
@@ -466,7 +466,7 @@
                           >
                             <div class="_1u60u8g">
                               <div class="footer__progress-active-wrapper">
-                                <div class="_10ejfg4u">
+                                <div class="payment-dropdown__text">
                                   <div class="_144bqbg">Getting started</div>
                                 </div>
                               </div>
@@ -482,7 +482,7 @@
                           >
                             <div class="_1u60u8g">
                               <div class="footer__progress-active-wrapper">
-                                <div class="_10ejfg4u">
+                                <div class="payment-dropdown__text">
                                   <div class="_144bqbg">
                                     Attracting bookings
                                   </div>
@@ -500,7 +500,7 @@
                           >
                             <div class="_1u60u8g">
                               <div class="footer__progress-active-wrapper">
-                                <div class="_10ejfg4u">
+                                <div class="payment-dropdown__text">
                                   <div class="_144bqbg">
                                     Providing a 5-star Experience
                                   </div>
@@ -518,7 +518,7 @@
                           >
                             <div class="_1u60u8g">
                               <div class="footer__progress-active-wrapper">
-                                <div class="_10ejfg4u">
+                                <div class="payment-dropdown__text">
                                   <div class="_144bqbg">
                                     Responsible hosting
                                   </div>
@@ -536,7 +536,7 @@
                           >
                             <div class="_1u60u8g">
                               <div class="footer__progress-active-wrapper">
-                                <div class="_10ejfg4u">
+                                <div class="payment-dropdown__text">
                                   <div class="_144bqbg">Online Experiences</div>
                                 </div>
                               </div>
@@ -566,7 +566,7 @@
                           >
                             <div class="_1u60u8g">
                               <div class="footer__progress-active-wrapper">
-                                <div class="_10ejfg4u">
+                                <div class="payment-dropdown__text">
                                   <div class="_144bqbg">
                                     News and updates for Experiences
                                   </div>
@@ -588,7 +588,7 @@
                     >
                       <div class="_1u60u8g">
                         <div class="footer__progress-active-wrapper">
-                          <div class="_10ejfg4u">
+                          <div class="payment-dropdown__text">
                             <div class="_144bqbg">Become a host</div>
                           </div>
                           <div class="cell-middle">
@@ -636,7 +636,7 @@
                       >
                         <div class="_1u60u8g">
                           <div class="footer__progress-active-wrapper">
-                            <div class="_10ejfg4u">
+                            <div class="payment-dropdown__text">
                               <div class="_144bqbg">Profile</div>
                             </div>
                             <div class="cell-middle">
@@ -671,7 +671,7 @@
                       >
                         <div class="_1u60u8g">
                           <div class="footer__progress-active-wrapper">
-                            <div class="_10ejfg4u">
+                            <div class="payment-dropdown__text">
                               <div class="_144bqbg">Settings</div>
                             </div>
                             <div class="cell-middle">
@@ -720,7 +720,7 @@
                       >
                         <div class="_1u60u8g">
                           <div class="footer__progress-active-wrapper">
-                            <div class="_10ejfg4u">
+                            <div class="payment-dropdown__text">
                               <div class="_144bqbg">Get help</div>
                             </div>
                             <div class="cell-middle">
@@ -769,7 +769,7 @@
                       >
                         <div class="_1u60u8g">
                           <div class="footer__progress-active-wrapper">
-                            <div class="_10ejfg4u">
+                            <div class="payment-dropdown__text">
                               <div class="_144bqbg">English (US)</div>
                             </div>
                             <div class="cell-middle">
@@ -804,7 +804,7 @@
                       >
                         <div class="_1u60u8g">
                           <div class="footer__progress-active-wrapper">
-                            <div class="_10ejfg4u">
+                            <div class="payment-dropdown__text">
                               <div class="_144bqbg">₱ PHP</div>
                             </div>
                             <div class="cell-middle">
@@ -1259,7 +1259,7 @@
                                           </div>
                                       </div>
                                   </div>
-                                  <div class="_10ejfg4u">
+                                  <div class="payment-dropdown__text">
                                       <div style="margin-left:16px">
                                           <div class="_1nz6vco">Airbnb</div>
                                           <div class="resolution__reservation-continer-wrapper">Feb 22, 2018</div>
