--- a/resource-center/video.html
+++ b/resource-center/video.html
@@ -68,7 +68,7 @@
                             </div>
                           </a>
                         </div>
-                        <div class="_10ejfg4u"></div>
+                        <div class="payment-dropdown__text"></div>
                         <div class="cell-middle">
                           <div style="margin-right: 16px">
                             <div class="_1ltxwi4">
@@ -88,7 +88,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="_10ejfg4u">
+                    <div class="payment-dropdown__text">
                       <div data-showat="mediumAndAbove" class="hidden block-md">
                         <div style="margin-left: 8px">
                           <div class="_cfvh61">
@@ -467,7 +467,7 @@
                           >
                             <div class="_1u60u8g">
                               <div class="footer__progress-active-wrapper">
-                                <div class="_10ejfg4u">
+                                <div class="payment-dropdown__text">
                                   <div class="_144bqbg">Getting started</div>
                                 </div>
                               </div>
@@ -483,7 +483,7 @@
                           >
                             <div class="_1u60u8g">
                               <div class="footer__progress-active-wrapper">
-                                <div class="_10ejfg4u">
+                                <div class="payment-dropdown__text">
                                   <div class="_144bqbg">
                                     Attracting bookings
                                   </div>
@@ -501,7 +501,7 @@
                           >
                             <div class="_1u60u8g">
                               <div class="footer__progress-active-wrapper">
-                                <div class="_10ejfg4u">
+                                <div class="payment-dropdown__text">
                                   <div class="_144bqbg">
                                     Providing a 5-star Experience
                                   </div>
@@ -519,7 +519,7 @@
                           >
                             <div class="_1u60u8g">
                               <div class="footer__progress-active-wrapper">
-                                <div class="_10ejfg4u">
+                                <div class="payment-dropdown__text">
                                   <div class="_144bqbg">
                                     Responsible hosting
                                   </div>
@@ -537,7 +537,7 @@
                           >
                             <div class="_1u60u8g">
                               <div class="footer__progress-active-wrapper">
-                                <div class="_10ejfg4u">
+                                <div class="payment-dropdown__text">
                                   <div class="_144bqbg">Online Experiences</div>
                                 </div>
                               </div>
@@ -567,7 +567,7 @@
                           >
                             <div class="_1u60u8g">
                               <div class="footer__progress-active-wrapper">
-                                <div class="_10ejfg4u">
+                                <div class="payment-dropdown__text">
                                   <div class="_144bqbg">
                                     News and updates for Experiences
                                   </div>
@@ -589,7 +589,7 @@
                     >
                       <div class="_1u60u8g">
                         <div class="footer__progress-active-wrapper">
-                          <div class="_10ejfg4u">
+                          <div class="payment-dropdown__text">
                             <div class="_144bqbg">Become a host</div>
                           </div>
                           <div class="cell-middle">
@@ -637,7 +637,7 @@
                       >
                         <div class="_1u60u8g">
                           <div class="footer__progress-active-wrapper">
-                            <div class="_10ejfg4u">
+                            <div class="payment-dropdown__text">
                               <div class="_144bqbg">Profile</div>
                             </div>
                             <div class="cell-middle">
@@ -672,7 +672,7 @@
                       >
                         <div class="_1u60u8g">
                           <div class="footer__progress-active-wrapper">
-                            <div class="_10ejfg4u">
+                            <div class="payment-dropdown__text">
                               <div class="_144bqbg">Settings</div>
                             </div>
                             <div class="cell-middle">
@@ -721,7 +721,7 @@
                       >
                         <div class="_1u60u8g">
                           <div class="footer__progress-active-wrapper">
-                            <div class="_10ejfg4u">
+                            <div class="payment-dropdown__text">
                               <div class="_144bqbg">Get help</div>
                             </div>
                             <div class="cell-middle">
@@ -770,7 +770,7 @@
                       >
                         <div class="_1u60u8g">
                           <div class="footer__progress-active-wrapper">
-                            <div class="_10ejfg4u">
+                            <div class="payment-dropdown__text">
                               <div class="_144bqbg">English (US)</div>
                             </div>
                             <div class="cell-middle">
@@ -805,7 +805,7 @@
                       >
                         <div class="_1u60u8g">
                           <div class="footer__progress-active-wrapper">
-                            <div class="_10ejfg4u">
+                            <div class="payment-dropdown__text">
                               <div class="_144bqbg">₱ PHP</div>
                             </div>
                             <div class="cell-middle">
@@ -1141,7 +1141,7 @@
                                           </div>
                                       </div>
                                   </div>
-                                  <div class="_10ejfg4u">
+                                  <div class="payment-dropdown__text">
                                       <div style="margin-left:16px">
                                           <div class="_1nz6vco">Airbnb</div>
                                           <div class="resolution__reservation-continer-wrapper">Oct 15, 2018</div>
